logs/Slang/generated/hdlconv/hdlconvertor_p489.sv.log
name: hdlconvertor_p489
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:1:1: error: expected member
checker c1(event clk, logic[7:0] a, b);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:1:22: error: expected identifier
checker c1(event clk, logic[7:0] a, b);
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:1:23: error: expected declarator
checker c1(event clk, logic[7:0] a, b);
                      ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:1:33: error: expected ','
checker c1(event clk, logic[7:0] a, b);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:1:38: error: expected declarator
checker c1(event clk, logic[7:0] a, b);
                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:4:14: error: invalid operands to binary expression ('event' and 'bit[0:0]')
    sum <= a + 1'b1;
           ~ ^ ~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:5:5: error: language feature not yet supported
    p0: assert property (sum < 12);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:7:3: error: language feature not yet supported
  p1: assert property (@clk sum < 12);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:8:3: error: language feature not yet supported
  p2: assert property (@clk a != b);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:9:3: error: language feature not yet supported
  p3: assert #0 ($onehot(a));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:10:1: error: expected member
endchecker
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:3: error: unknown module 'c1'
  c1 check_outside(posedge clk, in1, in2);
  ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:20: error: expected hierarhical instantiation
  c1 check_outside(posedge clk, in1, in2);
                   ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:20: error: expected port connection
  c1 check_outside(posedge clk, in1, in2);
                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:27: error: expected ','
  c1 check_outside(posedge clk, in1, in2);
                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:31: error: expected '('
  c1 check_outside(posedge clk, in1, in2);
                              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:36: error: expected '('
  c1 check_outside(posedge clk, in1, in2);
                                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:41: error: expected '('
  c1 check_outside(posedge clk, in1, in2);
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:14:41: error: expected hierarhical instantiation
  c1 check_outside(posedge clk, in1, in2);
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:19:7: error: use of undeclared identifier 'c1'
      c1 check_inside(posedge clk, in1, v1);
      ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:19:22: error: expected declarator
      c1 check_inside(posedge clk, in1, v1);
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:19:30: error: expected ','
      c1 check_inside(posedge clk, in1, v1);
                             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:19:43: error: expected declarator
      c1 check_inside(posedge clk, in1, v1);
                                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:26:9: error: use of undeclared identifier 'c1'
        c1 check_loop(posedge clk, in1, in_array[v1]);
        ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:26:22: error: expected declarator
        c1 check_loop(posedge clk, in1, in_array[v1]);
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:26:30: error: expected ','
        c1 check_loop(posedge clk, in1, in_array[v1]);
                             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p489.sv:26:53: error: expected declarator
        c1 check_loop(posedge clk, in1, in_array[v1]);
                                                    ^
